fix font contrast ratio

--- a/src/styles/utils/_typography.scss
+++ b/src/styles/utils/_typography.scss
@@ -20,7 +20,7 @@
 .body__md {
   font-size: 1.3rem;
   font-weight: 400;
-  color: rgba($col__black, 0.6);
+  color: rgba($col__black, 0.7);
   line-height: 1.4;
   letter-spacing: 0.75px;
 }
